--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Portfolio Website</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body class="open-sans">
     <header>
         <!-- navbar section -->
-         <nav class="navber">
+        <nav class="navber">
             <h3 class="nav-title dark-1">Ma<span class="title-unique">r</span>y</h3>
             <div class="nav-list">
                 <ul>
@@ -18,7 +20,36 @@
                 </ul>
                 <button class="btn-primary nav-btn">Hire Me</button>
             </div>
-         </nav>
+        </nav>
+
+        <img class="dev" src="images/developer.png" alt="">
+
+        <!-- hero section -->
+        <div class="hero">
+            <div class="hero-text">
+                 <h3 class="hero-semi-title">Hi, I am</h3>
+                 <h2 class="hero-title dark-1">Mary Hardy</h2>
+                 <p class="hero-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                     because as to society behaved moments.</p>
+                 <div class="hero-buttons">
+                     <button class="btn-primary">
+                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="btn-icon">
+                             <path stroke-linecap="round" stroke-linejoin="round"
+                                 d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+                         </svg>Download CV</button>
+                     <button class="hero-btn">
+                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-6 btn-icon">
+                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
+                         </svg>Contact</button>
+                 </div>
+            </div>
+            <div class="hero-image">
+                 <img src="images/hardy.png" alt="">
+            </div>
+        </div>
     </header>
 </body>
+
 </html>
