added summary and what I do sections

--- a/index.html
+++ b/index.html
@@ -27,22 +27,17 @@
         <!-- hero section -->
         <div class="hero">
             <div class="hero-text">
-                 <h3 class="hero-semi-title">Hi, I am</h3>
+                 <h3 class="hero-semi-title dark-2">Hi, I am</h3>
                  <h2 class="hero-title dark-1">Mary Hardy</h2>
-                 <p class="hero-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
-                     because as to society behaved moments.</p>
+                 <p class="hero-description dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                  <div class="hero-buttons">
-                     <button class="btn-primary">
-                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor" class="btn-icon">
-                             <path stroke-linecap="round" stroke-linejoin="round"
-                                 d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
-                         </svg>Download CV</button>
-                     <button class="hero-btn">
-                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor" class="size-6 btn-icon">
-                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
-                         </svg>Contact</button>
+                    <button class="btn-primary">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="btn-icon"> <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+                        </svg>Download CV</button>
+                    <button class="hero-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 btn-icon"> <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
+                        </svg>Contact</button>
                  </div>
             </div>
             <div class="hero-image">
@@ -50,6 +45,124 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <!-- about section -->
+        <section>
+            <div class="about-container">
+                <div>
+                    <h3 class="about-title dark-1">About Me</h3>
+                    <p class="about-description dark-3">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                </div>
+                <div class="info-container">
+                    <div>
+                        <p class="info dark-3">Name:</p>
+                        <p class="info-details dark-2">Mary Hardy</p>
+                    </div>
+                    <div>
+                        <p class="info dark-3">Email:</p>
+                        <p class="info-details dark-2">info@gmail.com</p>
+                    </div>
+                    <div>
+                        <p class="info dark-3">Date of birth:</p>
+                        <p class="info-details dark-2">11 November 1987</p>
+                    </div>
+                    <div>
+                        <p class="info dark-3">From:</p>
+                        <p class="info-details dark-2">Los Angeles, USA</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- what I do section -->
+        <section>
+            <div class="experience">
+                <h3 class="experience-title dark-1">What I do</h3>
+                <p class="experience-description dark-3">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+            <div class="cards">
+                <div class="card-container">
+                    <img src="images/icons/js.png" alt="">
+                    <div class="card">
+                        <h3 class="card-title dark-1">Vanilla JavaScript</h3>
+                        <p class="card-description dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <img src="images/icons/react.png" alt="">
+                    <div class="card">
+                        <h3 class="card-title dark-1">Vanilla JavaScript</h3>
+                        <p class="card-description dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <div class="card">
+                        <h3 class="card-title dark-1">Vanilla JavaScript</h3>
+                        <p class="card-description dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <img src="images/icons/mongo.png" alt="">
+                    <div class="card">
+                        <h3 class="card-title dark-1">Vanilla JavaScript</h3>
+                        <p class="card-description dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- summary section -->
+        <section>
+            <h3 class="summary-heading dark-1">A summary of My Resume</h3>
+            <div class="summary-container">
+                <div>
+                    <h3 class="summary-title dark-2">My Education</h3>
+                    <div class="summary">
+                        <h4 class="summary-subtitle dark-2">Master in Computer Engineering</h4>
+                        <h5 class="summary-info dark-3">Harvard University / 2015 - 2017</h5>
+                        <p class="dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="summary">
+                        <h4 class="summary-subtitle dark-2">Master in Computer Engineering</h4>
+                        <h5 class="summary-info dark-3">Harvard University / 2015 - 2017</h5>
+                        <p class="dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="summary">
+                        <h4 class="summary-subtitle dark-2">Master in Computer Engineering</h4>
+                        <h5 class="summary-info dark-3">Harvard University / 2015 - 2017</h5>
+                        <p class="dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="summary-title dark-2">My Experience</h3>
+                    <div class="summary">
+                        <h4 class="summary-subtitle dark-2">Sr. Font End Developer</h4>
+                        <h5 class="summary-info dark-3">Apple Inc / 2020 - Current</h5>
+                        <p class="dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="summary">
+                        <h4 class="summary-subtitle dark-2">Jr. Font End Developer</h4>
+                        <h5 class="summary-info dark-3">Dribbble Inc / 2018 - 2022</h5>
+                        <p class="dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="summary">
+                        <h4 class="summary-subtitle dark-2">HTML Developer</h4>
+                        <h5 class="summary-info dark-3">Adobe Inc / 2017 - 2018</h5>
+                        <p class="dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-primary summary-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="btn-icon"> <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+                </svg>Download CV</button>
+        </section>
+    </main>
 </body>
 
 </html>
