--- a/index.html
+++ b/index.html
@@ -163,6 +163,33 @@
                 </svg>Download CV</button>
         </section>
     </main>
+
+    <footer>
+        <!-- footer section -->
+        <section>
+            <div class="footer">
+                <div>
+                    <h3 class="footer-title dark-1">Lets Connect</h3>
+                    <p class="footer-description dark-2">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                    <div class="icons">
+                        <img class="icon" src="images/icons/facebook.png" alt="">
+                        <img class="icon" src="images/icons/twitter.png" alt="">
+                        <img src="images/icons/insta.png" alt="">
+                    </div>
+                </div>
+                <div>
+                    <h3 class="footer-title dark-1">Let’s Message me</h3>
+                    <div class="forms">
+                        <input class="form dark-3" type="text" placeholder="Your name">
+                        <input class="form dark-3" type="text" placeholder="Your email">
+                    </div>
+                    <textarea class="textarea dark-3" name="" id="" placeholder="Message"></textarea>
+                    <button class="btn-primary footer-btn">Submit</button>
+                </div>
+            </div>
+        </section>
+         
+    </footer>
 </body>
 
 </html>
